--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <h1>Search Anything 🔍</h1>
 
-  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+  <form action="https://formspree.io/f/mzzakrln" method="POST">
     <input type="text" name="searchQuery" placeholder="Type your search here..." required>
     <input type="submit" value="Send">
   </form>
